--- a/1-1.第一个C++程序/1-1.第一个C++程序.vcxproj.filters
+++ b/1-1.第一个C++程序/1-1.第一个C++程序.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="1.13.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="1.16.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
