--- a/1-1.第一个C++程序/1-1.第一个C++程序.vcxproj
+++ b/1-1.第一个C++程序/1-1.第一个C++程序.vcxproj
@@ -148,7 +148,10 @@
     <ClCompile Include="1.12.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="1.13.cpp" />
+    <ClCompile Include="1.13.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="1.16.cpp" />
     <ClCompile Include="1.4.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
