--- a/1-1.第一个C++程序/1-1.第一个C++程序.vcxproj.filters
+++ b/1-1.第一个C++程序/1-1.第一个C++程序.vcxproj.filters
@@ -48,5 +48,19 @@
     <ClCompile Include="1.16.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="1.17.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1.200.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="1.21.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="shudian.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
