--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,5 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /1-1.第一个C++程序/1.200.cpp
+/第二章/第二章.vcxproj
+/第二章/第二章.vcxproj.filters
